vueService.yml
apiVersion: v1
kind: Service
metadata:
  name: vueService
  labels:
    app: vue
spec:
  selector:
    app: vue
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
